# RAG-n-Roll-Extractor

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
docs/: conf.py  index.rst
src/rag_n_roll_extractor/: __init__.py  chuncking.py  chunking.py
